--- a/public/onedash-app-template/css/bootstrap-extended.css
+++ b/public/onedash-app-template/css/bootstrap-extended.css
@@ -27,7 +27,8 @@
 /* Background Colors */
 
 .bg-primary {
-    background-color: #3461ff!important;
+    /* background-color: #3461ff!important; */
+	background-color: #12bf24!important;
 }
 
 .bg-danger {
@@ -267,7 +268,7 @@
 /* Borders */
 
 .border-primary {
-    border-color: #3461ff!important;
+    border-color: #0ea01c!important;
 }
 
 .border-danger {
@@ -327,32 +328,44 @@
 
 .btn-primary {
 	color: #fff;
-	background-color: #3461ff;
-	border-color: #3461ff
+	/* background-color: #3461ff;
+	border-color: #3461ff */
+	background-color: #0c971a;
+	border-color: #0c971a
 }
 .btn-primary:hover {
 	color: #fff;
-	background-color: #0b5ed7;
-	border-color: #0a58ca
+	/* background-color: #0b5ed7;
+	border-color: #0a58ca */
+	background-color: #0ea01c;
+	border-color: #0ea01c
 }
 .btn-check:focus+.btn-primary, .btn-primary:focus {
 	color: #fff;
-	background-color: #0b5ed7;
+	/* background-color: #0b5ed7;
 	border-color: #0a58ca;
-	box-shadow: 0 0 0 .25rem rgba(49, 132, 253, .5)
+	box-shadow: 0 0 0 .25rem rgba(49, 132, 253, .5) */
+	background-color: #0ea01c;
+	border-color: #0ea01c;
+	box-shadow: 0 0 0 .25rem rgba(9, 133, 21, 0.507)
 }
 .btn-check:active+.btn-primary, .btn-check:checked+.btn-primary, .btn-primary.active, .btn-primary:active, .show>.btn-primary.dropdown-toggle {
 	color: #fff;
-	background-color: #0a58ca;
-	border-color: #0a53be
+	/* background-color: #0a58ca;
+	border-color: #0a53be */
+	background-color: #0ea01c;
+	border-color: #0ea01c
 }
 .btn-check:active+.btn-primary:focus, .btn-check:checked+.btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show>.btn-primary.dropdown-toggle:focus {
-	box-shadow: 0 0 0 .25rem rgba(49, 132, 253, .5)
+	/* box-shadow: 0 0 0 .25rem rgba(49, 132, 253, .5) */
+	box-shadow: 0 0 0 .25rem rgba(9, 133, 21, 0.507)
 }
 .btn-primary.disabled, .btn-primary:disabled {
 	color: #fff;
-	background-color: #3461ff;
-	border-color: #3461ff
+	/* background-color: #3461ff;
+	border-color: #3461ff */
+	background-color: #12bf24;
+	border-color: #12bf24
 }
 .btn-secondary {
 	color: #fff;
@@ -558,27 +571,28 @@
 	border-color: #212529
 }
 .btn-outline-primary {
-	color: #3461ff;
-	border-color: #3461ff
+	/* border-color: #3461ff */
+	color: #12bf24;
+	border-color: #12bf24
 }
 .btn-outline-primary:hover {
 	color: #fff;
-	background-color: #3461ff;
-	border-color: #3461ff
+	background-color: #12bf24;
+	border-color: #12bf24
 }
 .btn-check:focus+.btn-outline-primary, .btn-outline-primary:focus {
-	box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .5)
+	box-shadow: 0 0 0 .25rem rgba(25, 135, 84, .5)
 }
 .btn-check:active+.btn-outline-primary, .btn-check:checked+.btn-outline-primary, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show, .btn-outline-primary:active {
 	color: #fff;
-	background-color: #3461ff;
-	border-color: #3461ff
+	background-color: #12bf24;
+	border-color: #12bf24
 }
 .btn-check:active+.btn-outline-primary:focus, .btn-check:checked+.btn-outline-primary:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus, .btn-outline-primary:active:focus {
-	box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .5)
+	box-shadow: 0 0 0 .25rem rgba(25, 135, 84, .5)
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-	color: #3461ff;
+	color: #12bf24;
 	background-color: transparent
 }
 .btn-outline-secondary {
